Parially working
git-svn-id: https://lsd-website.googlecode.com/svn/trunk@371 256981f4-bd85-11de-ac70-2fe2a02b5c02